PR gdb/14550

* jit.c (finalize_symtab): Ensure that only the global block has a
   NULL superblock.